<resources>
    <string name="app_name_short">125</string>
    <string name="app_name">HUNDatfuenfazwanzg</string>
    <string name="title_sale">Sale</string>
    <string name="title_persons">Persons</string>
    <string name="title_articles">Articles</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_settings">Settings</string>
    <string name="person_direct">Directsale</string>

    <string name="category_favorite">Favorites</string>
    <string name="category_alcoholic">Alcoholic</string>
    <string name="category_nonalcoholic">Nonalcoholic</string>
    <string name="category_meal">Meals</string>
    <string name="category_sweets">Sweets</string>

    <string name="enter_fields">Please enter values in all fields</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please wait ...</string>

    <string name="new_person">New Person</string>
    <string name="save_person">Person speichern</string>
    <string name="person">Person</string>
    <string name="delete_person">Do you really want to delete this person?</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="phoneNr">Phone-Nr</string>
    <string name="isMember">Is Member</string>
    <string name="enter_name">Please enter a name</string>
    <string name="actual_credit">Actual Credit</string>
    <string name="credit">Credit</string>
    <string name="credit_short">Credit</string>
    <string name="add_credit">Add credit</string>

    <string name="article_name">Article-Name</string>
    <string name="article">Article</string>
    <string name="new_article">New Article</string>
    <string name="save_article">Artikel speichern</string>
    <string name="delete_article">Do you really want to delete this article?</string>
    <string name="price">Price</string>
    <string name="category">Category</string>
    <string name="isFavorite">Favorite</string>
    <string name="article_delete_now_allowed">You can not delete this article</string>
    <string name="article_edit_now_allowed">You can not edit this article</string>

    <string name="add_article">Add Article</string>
    <string name="sum">Sum</string>
    <string name="new_sale">New Sale</string>
    <string name="delete_sale">Do you really want to delete this sale?</string>
    <string name="save_sale_changes">Do you want to save the changes?</string>

    <string name="choose_person">Choose Person</string>
    <string name="top10">Top 10</string>
    <string name="more_persons">More</string>

    <string name="choose_article">Choose Article</string>
    <string name="actual_selection">Actual Selection</string>

    <string name="pay">Pay</string>
    <string name="use_credit">Use credit</string>
    <string name="to_pay">to pay</string>
    <string name="incl_tip">incl. Tip</string>
    <string name="tip">Tip</string>
    <string name="given">given</string>
    <string name="retour">retour</string>
    <string name="remaining_credit">remain. credit</string>
    <string name="added_credit" formatted="false">%eur credit has been added to %pers</string>

    <string name="failed_loading_persons">Error on loading persons</string>
    <string name="failed_loading_articles">Error on loading articles</string>
    <string name="failed_loading_sales">Error on loading sales</string>

    <string name="auth_failed">Not authenticated</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="auth_wrong">Username or Password wrong</string>

    <string name="open_sales">Open Positions</string>
    <string name="payed">Payed</string>

    <string name="choose_day">Choose day</string>

    <string name="no_sale">There is no sale for this day.\nTap on + for adding a new one.</string>

    <string name="date_from">Date from</string>
    <string name="date_to">Date to</string>

    <string name="wrong_day">Warning, the wrong day is selected, please choose the correct day for adding a new sale</string>

    <string name="save">Save</string>
</resources>
