<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_sale"
        android:icon="@drawable/ic_euro_black"
        android:title="@string/title_sale" />

    <item
        android:id="@+id/navigation_persons"
        android:icon="@drawable/ic_person_black"
        android:title="@string/title_persons" />

    <item
        android:id="@+id/navigation_articles"
        android:icon="@drawable/ic_coffee_black"
        android:title="@string/title_articles" />
    <!--
    <item
        android:id="@+id/navigation_statistics"
        android:icon="@drawable/ic_piechart_black"
        android:title="@string/title_statistics" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black"
        android:title="@string/title_settings" />
    -->
</menu>
