<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/progressbar"></include>
    <include layout="@layout/pleasewait"></include>
    <LinearLayout
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <EditText
                    android:id="@+id/textLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:hint="@string/lastname"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

                <EditText
                    android:id="@+id/textFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:hint="@string/firstname"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/imageSwap"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/ic_swap"
                android:backgroundTint="@color/colorAccent"
                android:layout_gravity="center_vertical">
            </ImageView>

        </LinearLayout>



        <EditText
            android:id="@+id/textPhoneNr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="text"
            android:hint="@string/phoneNr"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <TextView
                android:id="@+id/textCredit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/credit"
                android:paddingLeft="6dp"
                android:gravity="left"
                android:layout_weight="1"/>

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkBoxMember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/isMember" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/buttonAddCredit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/add_credit" />

    </LinearLayout>

    <android:android.support.design.widget.FloatingActionButton
        android:id="@+id/button"
        layout_height="wrap_content"
        layout_width="wrap_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:src="@drawable/ic_check"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp">
    </android:android.support.design.widget.FloatingActionButton>

</android.support.design.widget.CoordinatorLayout>
