<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    android:id="@+id/coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/progressbar"></include>
    <include layout="@layout/pleasewait"></include>
    <LinearLayout
        android:padding="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/textTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/article_name"
            android:maxLines="1"
            android:inputType="text"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"

            android:layout_marginBottom="@dimen/activity_horizontal_margin">

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:id="@+id/spinnerCategory"
                android:tooltipText="@string/category"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/textPrice"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:gravity="right"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:digits="0123456789,"
                android:maxLines="1" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/checkBoxFavorite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/isFavorite" />

    </LinearLayout>

    <android:android.support.design.widget.FloatingActionButton
        android:id="@+id/button"
        layout_height="wrap_content"
        layout_width="wrap_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        android:src="@drawable/ic_check"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|right"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp">
    </android:android.support.design.widget.FloatingActionButton>

</android.support.design.widget.CoordinatorLayout>
